fixed menu margin left missing on iOS devices

--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -137,7 +137,7 @@ Label, Button, Span {
   background-position: left;
   height: 100%;
   background-size: cover;
-  padding: 20pt;
+  padding: 20pt 0 0 0;
   
   .close-menu {
     margin: 20pt 0 30pt 0;
